--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: default
  
 <div class="hero">
   <div class="hero-image">
-    <img src="/img/lego-matthew.png" alt="Matthew Shifrin and his LEGO collection.">
+    <img src="{{"/img/lego-matthew.png" | prepend: site.baseurl }}" alt="Matthew Shifrin and his LEGO collection.">
   </div>
   <div class="hero-text">
-    <p><span class="hello">Hello!</span> The home of text-based instructions for commercially-available LEGO sets, which can be built independently by blind or visually impaired people.</p>
+    <p><span class="hello">The home of text-based instructions for commercially-available LEGO sets, which can be built independently by blind or visually impaired people.</p>
   </div>
   <a class="webicon facebook" href="http://www.facebook.com/share.php?u={{site.url}}&title={{site.title}}">Share on Facebook</a>
   <a class="webicon twitter" href="http://twitter.com/home?status={{site.title}}+{{site.url}}">Tweet</a>
