Test to increment build for pages?
Trying to edit a known file to force a pages build

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 
 
- 
+<!-- test -->
 <div class="hero">
   <div class="hero-image">
     <img src="{{"/img/lego-matthew.png" | prepend: site.baseurl }}" alt="Matthew Shifrin and his LEGO collection.">
