Touch to rebuild

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: "home"
 
 // var emailPos = $(".marker").offset().top;
 
-// console.log("lol" + emailPos);
+// console.log("lol" + emailPos); rebuild change.
 // $(window).on('scroll',function(){
 //     var y = $(this).scrollTop();
 //     console.log(y);
